Создано с помощью Colaboratory

--- a/Project_MMDA/Project_MMDA.ipynb
+++ b/Project_MMDA/Project_MMDA.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPDBmbTc8Onn7O451ovIjMb",
+      "authorship_tag": "ABX9TyOlehCJSbXaX2bL1sETVyAT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2898,7 +2898,7 @@
       "source": [
         "At this point we have the results for both AutoML approach and Catboost\n",
         "\n",
-        "We can see that AutoML slightly outperform Catboost. But the difference is small. However, it was much longer to train full AutoML pipeline compared to CatBoost. So in this situation we have a tradeoff between speed and quality\n",
+        "We can see that AutoML slightly outperform Catboost (AutoML: 0.922, CatBoost: 0.914). But the difference is small. However, it was much longer to train full AutoML pipeline compared to CatBoost. So in this situation we have a tradeoff between speed and quality\n",
         "\n",
         "Both approaches showed similar feature importance\n",
         "The top 3 important variables are:\n",
